# Skyrim_SpellHotbar

./: .gitignore  README.md
SWF_Generator/src/: Main.java
python_scripts/: build_release_package.py  clean_images.py  output_mcm_code.py  stitch_icon_atlas.py  swf_icons.py  toggle_skse.pyw
python_scripts/spell_lists/: alteration.csv  conjuration.csv  destruction.csv  illusion.csv  powers.csv  restoration.csv  shouts.csv
python_scripts/spell_lists/mods/: arclight.csv  astral_magic_2.csv  desecration.csv  sonic_magic.csv  storm_calling_magic2.csv  thunderchild.csv  triumvirate_cleric.csv  triumvirate_druid.csv  triumvirate_shadow_mage.csv  triumvirate_shaman.csv  triumvirate_warlock.csv  vulcano.csv
skse_plugin/: CMakeLists.txt  LICENSE.txt  vcpkg-configuration.json  vcpkg.json
skse_plugin/CommonLibSSE-NG_fsreg/ports/commonlibsse-ng/0.1.0/: portfile.cmake  vcpkg.json
skse_plugin/CommonLibSSE-NG_fsreg/versions/: baseline.json
skse_plugin/CommonLibSSE-NG_fsreg/versions/c-/: commonlibsse-ng.json
skse_plugin/src/: plugin.cpp
skse_plugin/src/bar/: hotbar.cpp  hotbar.h  hotbars.cpp  hotbars.h
skse_plugin/src/events/: eventlistener.cpp  eventlistener.h
skse_plugin/src/game_data/: csv_loader.h  custom_transform_csv_loader.cpp  custom_transform_csv_loader.h  game_data.cpp  game_data.h  spell_casteffect_csv_loader.cpp  spell_casteffect_csv_loader.h  spell_data_csv_loader.cpp  spell_data_csv_loader.h
skse_plugin/src/input/: input.cpp  input.h
skse_plugin/src/logger/: logger.cpp  logger.h
skse_plugin/src/papyrus_extensions/: papyrus_functions.cpp  papyrus_functions.h
skse_plugin/src/rendering/: render_manager.cpp  render_manager.h  texture_csv_loader.cpp  texture_csv_loader.h  texture_loader.cpp  texture_loader.h
skse_plugin/src/storage/: storage.cpp  storage.h
